2012-08-17  Thiago Marcos P. Santos  <thiago.santos@intel.com>

        [EFL] Change font family/script on layout tests causes flakiness
        https://bugs.webkit.org/show_bug.cgi?id=94327

        Reviewed by Kenneth Rohde Christiansen.

        Always set the font on WebCore even if the font family is the same. It
        has to be done because the script value might have also changed.
        Settings::set*FontFamily() has an implicit UScriptCode
        parameter that will set the script back to the defaults.

        * ewk/ewk_view.cpp:
        (ewk_view_font_family_name_set):

2012-08-14  Adam Barth  <abarth@webkit.org>

        Delete Frame::domWindow() and Frame::existingDOMWindow()
        https://bugs.webkit.org/show_bug.cgi?id=93990

        Reviewed by Eric Seidel.

        * WebCoreSupport/DumpRenderTreeSupportEfl.cpp:
        (DumpRenderTreeSupportEfl::pendingUnloadEventCount):
        * ewk/ewk_frame.cpp:
        (ewk_frame_intent_deliver):

2012-08-13  Tom Sepez  <tsepez@chromium.org>

        [chromium] release FrameLoaderClientImpl::m_pluginWidget refptr upon Plugin Document detach.
        https://bugs.webkit.org/show_bug.cgi?id=93283

        Reviewed by Eric Seidel.

        Change the client redirectDataToPlugin method(s) to expect the possibility of
        a NULL argument, keeping existing behaviour otherwise.

        * WebCoreSupport/FrameLoaderClientEfl.cpp:
        (WebCore::FrameLoaderClientEfl::redirectDataToPlugin):

2012-08-12  Krzysztof Czech  <k.czech@samsung.com>

        [EFL][UT] Delete shutdown method.
        https://bugs.webkit.org/show_bug.cgi?id=90785

        Reviewed by Eric Seidel.

        EWKTestBase class already has a shutdownAll method that can be used instead of shutdown.

        * tests/UnitTestUtils/EWKTestBase.cpp:
        * tests/UnitTestUtils/EWKTestBase.h:
        (EWKTestBase):

2012-08-09  Carlos Garcia Campos  <cgarcia@igalia.com>

        Handle SSL errors for SOUP